# pixsync

./: .gitignore  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/src/: main.py
backend/src/database/: faces.sqlite
backend/src/notebooks/: test_face_search.ipynb
backend/src/routers/v1/: photos_router.py  v1_router.py
backend/src/services/: face_search.py  photo_service.py
backend/src/utils/: face_indexer.py  face_processor.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  PhotoGrid.js
