[tool.poetry]
name = "pixsync-backend"
version = "0.1.0"
description = "Backend for Pixsync using FastAPI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
numpy = "^1.26.4"
pandas = "^2.2.2"
scipy = "^1.13.0"
scikit-learn = "^1.4.2"
Pillow = "^10.3.0"
opencv-python = "^4.9.0.80"
torch = "^2.3.0"
torchvision = "^0.18.0"
torchaudio = "^2.3.0"
tensorflow = "^2.16.1"
transformers = "^4.41.1"
diffusers = "^0.27.2"
accelerate = "^0.30.1"
matplotlib = "^3.9.0"
requests = "^2.32.2"
python-multipart = "^0.0.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
